
5.1.0 -> 5.2a0:
    - jbj: rpmdav: add html parser to extract plain http href's.
    - at: gzdio: return partial "best effort" bytes written with gzfoo errors.
    - at: gzdio: do gzflush only after RSYNC_WIN boundaries.
    - at: gzdio: push gzFile into a private container.
    - jbj: rpmio: mark "server awol" disconnected state for graceful error
	handling.
    - jbj: rpmrepo: avoid double'd error message.
    - jbj: rpmrepo: terminate immediately, rather than "best-effort" continue,
	on I/O error.
    - jbj: rpmrepo: terminate on short read, don't bother with extra EOF read.
    - jbj: rpmwget: turn on --limit-rate. overdamped afaict, todo++ ...
    - jbj: rpmwget: move most of the calculations into the notify callback.
    - jbj: rpmurl: add send/recv/total accumulators.
    - jbj: add --whatneeds/--needswhat popt aliases.
    - jbj: make gzdio.c standalone.
    - rpm.org: Make verifyAttrs and virtualFileAttributes static.
    - rpm.org: Teach Fflush about lzdio.
    - jbj: add _flush to FDIO_t, make bzdio.c standalone.
    - jbj: rpmio: start deconstructing the ancient URL callback.
    - jbj: rpmwget: ... display connection state in wgetNotify.
    - jbj: rpmdav: pass the neon callback thru (*u->notify) to ...
    - jbj: rpmurl: devise a passthru connection progress callback.
    - jbj: rpmwget: preliminaries for -o/-a output file logging.
    - jbj: rpmwget: wire up --quota.
    - jbj: rpmsw: change bytes accumulator to unsigned long long.
    - jbj: rpmwget: wire up --limit-rate. more to do ...
    - jbj: rpmwget: wire up --progress; only "bar|none" args implemented.
    - jbj: rpmwget: add rate/eta calculation to progress bar and logging.
    - jbj: rpmdav: prepare to tie wget logging into davNotify transitions.
    - at: rpmfi: new function: size_t rpmfiFNMaxLen(rpmfi).
    - at: rpmbuild: check for unpackaged subdirectories.
    - jbj: fix: resurrect cpuinfo() probe, hack-o-rounds for both /proc & libio.